# backend/api/gen/openapi/user/v1/user.swagger.json
@@ -38,28 +38,6 @@
         ]
       }
     },
-    "/api/v1/healthz": {
-      "get": {
-        "operationId": "UserService_Healthz",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1HealthzResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "UserService"
-        ]
-      }
-    },
     "/api/v1/login": {
       "post": {
         "operationId": "UserService_Login",
@@ -158,14 +136,6 @@
       "type": "object",
       "properties": {
         "dbStatus": {
-          "type": "string"
-        }
-      }
-    },
-    "v1HealthzResponse": {
-      "type": "object",
-      "properties": {
-        "status": {
           "type": "string"
         }
       }
